crates/core-macros/tests/compile/fail/describe_value_enum_mixed_valid_invalid.rs
use actrpc_core::DescribeValue;
use serde::{Deserialize, Serialize};

#[derive(Debug, Clone, PartialEq, Serialize, Deserialize, DescribeValue)]
enum Mixed {
    Valid(String),
    Invalid { value: String },
}

fn main() {}
