crates/core-macros/tests/compile/fail/describe_value_enum_mixed_valid_invalid.stderr
error: enum variants with named fields are not supported by DescribeValue; use a separate struct type per variant
 --> tests/compile/fail/describe_value_enum_mixed_valid_invalid.rs:7:5
  |
7 |     Invalid { value: String },
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^
